<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/app_title"
    android:textSize="25sp"
    android:layout_gravity="center"
    />
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/selected_acc"
	android:paddingLeft="10dip"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="111111111111"
	android:paddingLeft="10dip"
	android:textSize="18sp"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/acc_balance"
	android:paddingLeft="10dip"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="100000.00"
	android:paddingLeft="10dip"
	android:textSize="18sp"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/inputed_num"
	android:paddingLeft="10dip"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="13988888888"
	android:paddingLeft="10dip"
	android:textSize="18sp"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/transed_amount"
	android:paddingLeft="10dip"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:textColor="#FFFF0000"
	android:text="1000.00"
	android:paddingLeft="10dip"
	android:textSize="18sp"
	/>
<TableLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
<TableRow>
<Button
	android:id="@+id/btn_cfm_ok"
	android:layout_width="80dip"
	android:layout_marginLeft="80dip"
	android:layout_marginTop="30dip"
	android:text="@string/btn_ok"
	/>
<Button
	android:id="@+id/btn_cfm_cancle"
	android:layout_width="80dip"
	android:layout_marginTop="30dip"
	android:text="@string/btn_cancle"
	/>
</TableRow>
</TableLayout>
</LinearLayout>