<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/bg">
	<include android:id="@+id/accManaAbove" layout="@layout/main_bank_above" />
	<include android:id="@+id/accManaBottom" layout="@layout/main_bank_bottom" />
	<LinearLayout android:layout_below="@id/accManaAbove" android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TextView android:id="@+id/accAct_tvSelectType"
			android:text="@string/accinfo_selectType" android:layout_width="fill_parent"
			android:layout_height="wrap_content"></TextView>
		<Spinner android:id="@+id/accAct_SpnrSelectType"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:prompt="@string/accinfo_selectTypeTitle"></Spinner>
			
		<TextView android:id="@+id/accAct_tvSelectAcc" android:text="@string/accinfo_selectAcc"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
		<Spinner android:id="@+id/accAct_SpnrSelectAcc"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:prompt="@string/accinfo_selectAccTitle"></Spinner>

		<TextView android:id="@+id/accAct_tvPwd" android:text="@string/accAct_TpyePwd"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
		<EditText android:id="@+id/accAct_dtPwd"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:prompt="@string/accinfo_selectAccTitle"></EditText>
			
		<Button android:layout_gravity="right" android:layout_width="wrap_content"
			android:text="@string/accAct_Active" android:layout_height="wrap_content"
			android:id="@+id/accAct_btnActive"></Button>
	</LinearLayout>
</RelativeLayout>
