<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/app_title"
    android:textSize="25sp"
    android:layout_gravity="center"
    />
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/select_acc"
	android:paddingLeft="10dip"
	/>
<RadioGroup
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip"
	android:orientation="vertical"
	>
<RadioButton
	android:id="@+id/rb_tr_acc1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="111111111111"
	/>
<RadioButton
	android:id="@+id/rb_acc2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="222222222222"
	/>
<RadioButton
	android:id="@+id/rb_acc3"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="333333333333"
	/>
</RadioGroup>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/input_num"
	android:paddingLeft="10dip"
	/>
<EditText
	android:id="@+id/input_num"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip"
	/>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/trans_amount"
	android:paddingLeft="10dip"
	/>
<EditText
	android:id="@+id/trans_amount"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip"
	/>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/input_psswrd"
	android:paddingLeft="10dip"
	/>
<EditText
	android:id="@+id/input_psswrd"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip"
	android:password="true"
	/>
<TableLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
<TableRow>
<Button
	android:id="@+id/btn_ok"
	android:layout_width="80dip"
	android:layout_marginLeft="80dip"
	android:text="@string/btn_ok"
	/>
<Button
	android:id="@+id/btn_cancle"
	android:layout_width="80dip"
	android:text="@string/btn_cancle"
	/>
</TableRow>
</TableLayout>
</LinearLayout>
