<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
<include android:id="@+id/transabove" layout="@layout/main_bank_above" />
<include android:id="@+id/transbelow" layout="@layout/main_bank_bottom" />
<ScrollView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical"
	android:layout_below="@id/transabove"
	android:layout_above="@id/transbelow"
	>
<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/select_acc"
	android:paddingLeft="10dip"
	/>
<RadioGroup
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip"
	android:orientation="vertical"
	>
<RadioButton
	android:id="@+id/rb_trac_acc1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="111111111111"
	/>
<RadioButton
	android:id="@+id/rb_trac_acc2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="222222222222"
	/>
<RadioButton
	android:id="@+id/rb_trac_acc3"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="333333333333"
	/>
</RadioGroup>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/input_acc"
	android:paddingLeft="10dip"
	/>
<EditText
	android:id="@+id/input_ac_acc"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip"
	/>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/trans_amount"
	android:paddingLeft="10dip"
	/>
<EditText
	android:id="@+id/trans_ac_amount"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip"
	/>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/input_psswrd"
	android:paddingLeft="10dip"
	/>
<EditText
	android:id="@+id/input_ac_psswrd"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip"
	android:password="true"
	/>
<TableLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
<TableRow>
<Button
	android:id="@+id/btn_ac_ok"
	android:layout_width="80dip"
	android:layout_marginLeft="80dip"
	android:text="@string/btn_ok"
	/>
<Button
	android:id="@+id/btn_ac_cancle"
	android:layout_width="80dip"
	android:text="@string/btn_cancle"
	/>
</TableRow>
</TableLayout>
</LinearLayout>
</ScrollView>
</RelativeLayout>