<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/main_background_2">
	<include android:id="@+id/accManaAbove" layout="@layout/main_bank_above" />
	<include android:id="@+id/accManaBottom" layout="@layout/main_bank_bottom" />
	<LinearLayout android:layout_below="@id/accManaAbove"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<!-- 用户号 -->
			<TextView android:id="@+id/accAdd_tvUser" android:textColor="#ff000000"
				android:layout_marginLeft="21dip" android:text="用户号"
				android:textSize="18dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content"></TextView>
			<TextView android:id="@+id/accAdd_tvUser2" android:textSize="18dip"
				android:textColor="#ff000000" android:layout_marginLeft="5dip"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
		</LinearLayout>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<!-- 账户类型 -->
		<TextView android:id="@+id/accAdd_tvSelectType"
			android:textSize="18dip" android:textColor="#ff000000"
			android:layout_marginLeft="21dip" android:text="@string/accinfo_selectType"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<Spinner android:id="@+id/accAdd_SpnrSelectType"
			android:textSize="18dip" android:background="@drawable/spinner1"
			android:layout_width="227dip" android:layout_marginLeft="47dip"
			android:layout_height="wrap_content" android:prompt="@string/accinfo_selectTypeTitle"></Spinner>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<!-- 账户 -->
		<TextView android:id="@+id/accAdd_tvAcc" android:text="请输入账户"
			android:textSize="18dip" android:layout_marginLeft="21dip"
			android:layout_width="fill_parent" android:textColor="#ff000000"
			android:layout_height="wrap_content"></TextView>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<EditText android:id="@+id/accAdd_dtAcc" android:background="@drawable/main_et"
			android:layout_width="227dip" android:layout_marginLeft="47dip"
			android:textSize="18dip" android:layout_height="wrap_content"
			android:prompt="@string/accinfo_selectAccTitle"></EditText>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<!-- 账户别名 -->
		<TextView android:id="@+id/accAdd_tvNickName" android:text="请设置账户别名"
			android:textSize="18dip" android:layout_marginLeft="21dip"
			android:layout_width="fill_parent" android:textColor="#ff000000"
			android:layout_height="wrap_content"></TextView>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<EditText android:id="@+id/accAdd_dtNickName"
			android:background="@drawable/main_et" android:layout_width="227dip"
			android:layout_marginLeft="47dip" android:layout_height="wrap_content"
			android:prompt="@string/accinfo_selectAccTitle"></EditText>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<!-- 密码 -->
		<TextView android:id="@+id/accAdd_tvPwd" android:text="@string/accAct_TpyePwd"
			android:textSize="18dip" android:layout_marginLeft="21dip"
			android:layout_width="fill_parent" android:textColor="#ff000000"
			android:layout_height="wrap_content"></TextView>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<EditText android:id="@+id/accAdd_dtPwd" android:background="@drawable/main_et"
			android:layout_width="227dip" android:layout_marginLeft="47dip"
			android:textSize="18dip" android:layout_height="wrap_content"
			android:prompt="@string/accinfo_selectAccTitle"></EditText>
		<TextView android:layout_height="1dip" android:layout_width="fill_parent"
			android:background="#cccccc">
		</TextView>
		<Button android:layout_gravity="center_horizontal"
			android:textSize="18dip" android:background="@drawable/main_next"
			android:layout_width="wrap_content" android:layout_marginTop="10dip"
			android:text="确认添加" android:layout_height="wrap_content" android:id="@+id/accAdd_btnAdd"></Button>
	</LinearLayout>
</RelativeLayout>
